k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: frontend
  name: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: ciwa09/k8s-web-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/data
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: web-app
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nfs-pvc
