k8s/manifests/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - web-app.default.svc.cluster.local
    secretName: web-tls
  rules:
  - host: "web-app.default.svc.cluster.local"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-app
              port:
                number: 80
